# 2024_C_GS_CONTROL

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LOX_FLS_IMPLEMENTATION_SUMMARY.md  README.md  Setup.h  av_downlink_VCF1.csv  compile_commands.json  main.cpp  server.py  start_tmux.sh  test_results.txt
.github/workflows/: main.yml
GUI/: CMakeLists.txt
GUI/include/: ControlPannelView.h  DataView.h  GSEWindow.h  GSManagerView.h  MainWindow.h  SerialView.h  TelemetryView.h  TimerView.h  ValveControlView.h
GUI/include/components/: DataLabel.h  DraggableButton.h  IcarusCommandsView.h  ToggleButton.h  ValveButton.h
GUI/res/: resources.qrc
GUI/src/: FileLocation.h  GSEWindow.cpp  MainWindow.cpp  Setup.h  main.cpp  start_func.cpp
GUI/src/components/: DataLabel.cpp  DraggableButton.cpp  IcarusCommandsView.cpp  ToggleButton.cpp  ValveButton.cpp  ValveControlButton.cpp
GUI/src/views/: ControlPannelView.cpp  GSManagerView.cpp  SerialView.cpp  TelemetryView.cpp  TimerView.cpp  ValveControlView.cpp
Server/: CMakeLists.txt
Server/include/: RequestAdapter.h  Server.h  data_storage.h  packet_helper.h
Server/src/: RequestAdapter.cpp  RequestAdapter_Icarus.cpp  ServerSetup.h  Setup.h  auth_key.json  data_storage.cpp  main.cpp  server.cpp  start_func.cpp
Server/src/helper/: packet_helper.cpp
Server/src/network/: RequestHandler.cpp
Server/tests/: data_storage_tests.cpp  request_adapter_tests.cpp
commons/: CMakeLists.txt
commons/include/: ClientInterface.h  ClientManager.h  FieldUtil.h  Log.h  PacketInterface.h  RequestBuilder.h
commons/src/: ClientManager.cpp  Log.cpp  RequestBuilder.cpp
tests/: CMakeLists.txt
tests/helpers/: LogSpySignals.h
tests/integration/: base_integration_test.cpp  base_integration_test.h  data_label_test.cpp  full_integration_test.cpp
tests/server/: data_storage_tests.cpp  request_adapter_tests.cpp
